--- a/estilos/pri-style.css
+++ b/estilos/pri-style.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    width: 100%;
     display: flex;
     margin: auto;
     flex-direction: column;
@@ -14,7 +15,7 @@ body {
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 2.2em;
     text-align: left;
     width: 250px;
     margin: auto;
@@ -27,17 +28,30 @@ body > article{
     margin: auto;
 }
 
+
 main{
     width: 300px;
     margin: auto;
 }
 
+main section h2{
+    margin: auto;
+    text-align: left;
+    font-size: 2em;
+}
+
 div#btn {
     background-color: black;
     color: white;
-    width: 150px;
+    width: 180px;
     height: 42px;
     margin: auto;
+}
+
+div#btn span{
+    font-size: 1.2em;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 div.image img{
@@ -45,7 +59,24 @@ div.image img{
     width: 250px;
 }
 
+div#btn button{
+    border-style: none;
+    height: 100%;
+    width: 40px;
+    font-size: 1.5em;
+    font-weight: bolder;
+    margin-left: 10px;
+}
+
 footer {
     width: 300px;
     margin: auto;
+    background-color: black;
+    color: white;
+}
+
+footer img{
+    margin: auto;
+    margin: 15px;
+    width: 30px;
 }
