--- a/estilos/pri-style.css
+++ b/estilos/pri-style.css
@@ -10,6 +10,7 @@ body {
     width: 100%;
     display: flex;
     margin: auto;
+    margin: 15px;
     flex-direction: column;
     text-align: center;
 }
@@ -17,20 +18,19 @@ body {
 h1 {
     font-size: 2.2em;
     text-align: left;
-    width: 250px;
+    width: 100%;
     margin: auto;
 }
 
 body > article{
     text-align: center;
     font-size: 1em;
-    width: 280px;
+    width: 90vw;
     margin: auto;
 }
 
-
 main{
-    width: 300px;
+    width: 100%;
     margin: auto;
 }
 
@@ -38,6 +38,11 @@ main section h2{
     margin: auto;
     text-align: left;
     font-size: 2em;
+}
+
+main section p{
+    width: 90vw;
+    margin: 20px;
 }
 
 div#btn {
@@ -56,7 +61,7 @@ div#btn span{
 
 div.image img{
     margin: auto;
-    width: 250px;
+    width: 300px;
 }
 
 div#btn button{
@@ -66,6 +71,7 @@ div#btn button{
     font-size: 1.5em;
     font-weight: bolder;
     margin-left: 10px;
+    background-color: rgb(253, 111, 86);
 }
 
 footer {
