--- a/estilos/pri-style.css
+++ b/estilos/pri-style.css
@@ -2,7 +2,7 @@
 
 * {
     margin: 0;
-    padding: 0%;
+    padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -23,7 +23,7 @@ h1 {
 }
 
 body > article{
-    text-align: center;
+    text-align: justify;
     font-size: 1em;
     width: 90vw;
     margin: auto;
@@ -43,6 +43,7 @@ main section h2{
 main section p{
     width: 90vw;
     margin: 20px;
+    text-align: justify;
 }
 
 div#btn {
@@ -74,11 +75,36 @@ div#btn button{
     background-color: rgb(253, 111, 86);
 }
 
-footer {
+article.destaque {
+    background-color: black;
+    color: white;
     width: 300px;
+    height: 250px;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 25px;
+    font-size: 1.2em;
+}
+
+footer {
+    width: 100%;
+    height: 200px;
     margin: auto;
     background-color: black;
     color: white;
+
+}
+
+footer h3{
+    font-size: 1.8em;
+    margin: 15px;
+}
+
+footer article{
+    margin: auto;
+    width: 300px;
+    text-align: justify;
 }
 
 footer img{
