--- a/estilos/pri-style.css
+++ b/estilos/pri-style.css
@@ -96,6 +96,7 @@ footer {
     width: 100%;
     height: 200px;
     margin: auto;
+    padding-bottom: 40px;
     background-color: black;
     color: white;
 
