--- a/estilos/pri-style.css
+++ b/estilos/pri-style.css
@@ -22,9 +22,8 @@ header{
 h1 {
     font-size: 2.2em;
     text-align: left;
-    width: 100%;
-    margin: auto;
-    margin-left: 10px;
+    width: 250px;
+    padding-left: 10px;
 }
 
 body > article{
