--- a/estilos/pri-style.css
+++ b/estilos/pri-style.css
@@ -22,6 +22,7 @@ header{
 h1 {
     font-size: 2.2em;
     text-align: left;
+    margin: auto;
     width: 250px;
     padding-left: 10px;
 }
@@ -93,7 +94,6 @@ article.destaque {
 
 footer {
     width: 100%;
-    height: 200px;
     margin: auto;
     padding-bottom: 40px;
     background-color: black;
